--- a/scss/sections/_main-plan-canje.scss
+++ b/scss/sections/_main-plan-canje.scss
@@ -1,9 +1,8 @@
 .canje {
-
+    margin-top: 20px;
     text-align: center;
     max-width: 90vw;
     margin: auto;
-    padding: 20px;
     color: black;
 
     img {
@@ -31,6 +30,7 @@
     background-color: #cee7e7cd;
     border-radius: 5px;
     margin: auto;
+    padding: 10px;
 
 }
 
@@ -63,8 +63,8 @@
     }
 }
 
-@media(max-width:1000px){
-    .canje__img{
+@media(max-width:1000px) {
+    .canje__img {
         display: none;
-        }
+    }
 }
