--- a/scss/sections/_main-quienes-somos.scss
+++ b/scss/sections/_main-quienes-somos.scss
@@ -1,77 +1,89 @@
-.bolsos {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-around;
+.quienes-somos {
     max-width: 90vw;
     margin: auto;
-    min-height: 85vh;
-    box-sizing: unset;
-    padding: 30px;
-    text-align: center;
-
+    color: black;
 }
 
-.grid-container-bolsos {
+.quienes__section {
+    text-align: center;
+    background-color: #90a6a6;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+.quienes__info {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
     grid-template-areas:
-        "bolso1 bolso2"
-        "bolso3 bolso4"
-        "bolso5 bolso6"
-        "bolso7 bolso7";
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.664);
-    width: 800px;
+        "img1 p1"
+        "p2 img2"
+        "img3 p3"
+        "p4 p4";
+    padding: 30px;
+    align-items: center;
     margin: auto;
-    background-size: cover;
 
+    img {
+        width: 30vw;
+        border-radius: 10px;
+        overflow: hidden;
+    }
 }
 
-.bolso1 {
-    grid-area: bolso1;
+.img1 {
+    grid-area: img1;
 }
 
-.bolso2 {
-    grid-area: bolso2;
+.img2 {
+    grid-area: img2;
 }
 
-.bolso3 {
-    grid-area: bolso3;
+.img3 {
+    grid-area: img3;
 }
 
-.bolso4 {
-    grid-area: bolso4;
+.p1 {
+    grid-area: p1;
 }
 
-.bolso5 {
-    grid-area: bolso5;
+.p2 {
+    grid-area: p2;
 }
 
-.bolso6 {
-    grid-area: bolso6;
+.p3 {
+    grid-area: p3;
 }
 
-.bolso7 {
-    grid-area: bolso7;
+.p4 {
+    grid-area: p4;
+    font-size: 25px;
 }
 
-.altura {
-    box-sizing: content-box !important;
-    margin: 20px auto;
-}
 
-@media(max-width:730px) {
-    .grid-container-bolsos {
+
+@media(max-width:1010px) {
+    .quienes__info {
+        padding: 0;
         grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(7, 1fr);
+        grid-template-rows: repeat(6, 1fr);
         grid-template-areas:
-            "bolso1"
-            "bolso2"
-            "bolso3"
-            "bolso4"
-            "bolso5"
-            "bolso6"
-            "bolso7";
+            "img1"
+            "p1"
+            "p2"
+            "p3"
+            "p4"
+            "img3";
+
+        img {
+            width: 200px;
+
+        }
+
+    }
+
+    .img2 {
+        display: none;
     }
 }
